[gd_scene load_steps=9 format=3 uid="uid://dek82gxmo48oh"]

[ext_resource type="Script" path="res://Scenes/Main/server_id.gd" id="1_2a40b"]
[ext_resource type="Script" path="res://Scenes/Main/multiplayer_buttons.gd" id="1_5xmv3"]
[ext_resource type="Script" path="res://Scenes/Main/ui.gd" id="1_e7435"]
[ext_resource type="PackedScene" uid="uid://dur07llej4wg4" path="res://Scenes/GridLine/grid_line.tscn" id="1_w7eti"]
[ext_resource type="Texture2D" uid="uid://ugkk6pebjwcs" path="res://Assets/circle.png" id="1_yy6lk"]
[ext_resource type="PackedScene" uid="uid://ddka1ehg4xqo8" path="res://Scenes/GridPosition/grid_position.tscn" id="2_epr14"]
[ext_resource type="Texture2D" uid="uid://bhciuoqpv0aax" path="res://Assets/cross.png" id="2_libex"]
[ext_resource type="Texture2D" uid="uid://tpqbvuwsxeeu" path="res://Assets/white-arrow.png" id="3_p061m"]

[node name="Main" type="Node"]

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="UI" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
grow_horizontal = 2
script = ExtResource("1_e7435")

[node name="Background" type="ColorRect" parent="CanvasLayer/UI"]
layout_mode = 0
offset_left = -80.0
offset_right = 80.0
offset_bottom = 50.0
color = Color(0, 0, 0, 1)

[node name="CircleImage" type="TextureRect" parent="CanvasLayer/UI"]
layout_mode = 0
offset_left = -45.0
offset_top = 5.0
offset_right = 555.0
offset_bottom = 488.0
scale = Vector2(0.07, 0.07)
texture = ExtResource("1_yy6lk")

[node name="CrossImage" type="TextureRect" parent="CanvasLayer/UI"]
layout_mode = 0
offset_left = 9.0
offset_top = 3.0
offset_right = 6024.0
offset_bottom = 6127.0
scale = Vector2(0.006, 0.006)
texture = ExtResource("2_libex")

[node name="YouCircleLabel" type="Label" parent="CanvasLayer/UI"]
layout_mode = 0
offset_left = -36.0
offset_top = 36.0
offset_right = 4.0
offset_bottom = 59.0
theme_override_font_sizes/font_size = 12
text = "YOU"

[node name="YouCrossLabel" type="Label" parent="CanvasLayer/UI"]
layout_mode = 0
offset_left = 15.0
offset_top = 36.0
offset_right = 55.0
offset_bottom = 59.0
theme_override_font_sizes/font_size = 12
text = "YOU"

[node name="ArrowCircleImage" type="TextureRect" parent="CanvasLayer/UI"]
layout_mode = 0
offset_left = -45.0
offset_top = 7.0
offset_right = 1555.0
offset_bottom = 1607.0
rotation = 1.5708
scale = Vector2(0.02, 0.02)
texture = ExtResource("3_p061m")

[node name="ArrowCrossImage" type="TextureRect" parent="CanvasLayer/UI"]
layout_mode = 0
offset_left = 46.0
offset_top = 39.0
offset_right = 1646.0
offset_bottom = 1639.0
rotation = -1.5708
scale = Vector2(0.02, 0.02)
texture = ExtResource("3_p061m")

[node name="MultiplayerSpawner" type="MultiplayerSpawner" parent="."]
_spawnable_scenes = PackedStringArray("res://Scenes/Cross/cross.tscn", "res://Scenes/Circle/circle.tscn")
spawn_path = NodePath("..")

[node name="Background" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0.71308, 0.664757, 0.634946, 1)

[node name="ServerID" type="Label" parent="."]
visible = false
offset_right = 109.0
offset_bottom = 23.0
script = ExtResource("1_2a40b")

[node name="MultiplayerButtons" type="VBoxContainer" parent="."]
offset_right = 109.0
offset_bottom = 66.0
script = ExtResource("1_5xmv3")

[node name="CreateGame" type="Button" parent="MultiplayerButtons"]
layout_mode = 2
theme_override_font_sizes/font_size = 10
text = "Create Game"

[node name="JoinGame" type="Button" parent="MultiplayerButtons"]
layout_mode = 2
theme_override_font_sizes/font_size = 10
text = "JoinGame
"

[node name="Grid" type="Node" parent="."]

[node name="GridLine" parent="Grid" instance=ExtResource("1_w7eti")]
position = Vector2(251, 60)

[node name="GridLine2" parent="Grid" instance=ExtResource("1_w7eti")]
position = Vector2(461, 60)

[node name="GridLine3" parent="Grid" instance=ExtResource("1_w7eti")]
position = Vector2(660, 251)
rotation = 1.5708

[node name="GridLine4" parent="Grid" instance=ExtResource("1_w7eti")]
position = Vector2(660, 461)
rotation = 1.5708

[node name="GridPosition_0_0" parent="Grid" instance=ExtResource("2_epr14")]
position = Vector2(150, 570)

[node name="GridPosition_0_1" parent="Grid" instance=ExtResource("2_epr14")]
position = Vector2(150, 360)
y = 1

[node name="GridPosition_0_2" parent="Grid" instance=ExtResource("2_epr14")]
position = Vector2(150, 150)
y = 2

[node name="GridPosition_1_0" parent="Grid" instance=ExtResource("2_epr14")]
position = Vector2(360, 570)
x = 1

[node name="GridPosition_1_1" parent="Grid" instance=ExtResource("2_epr14")]
position = Vector2(360, 360)
x = 1
y = 1

[node name="GridPosition_1_2" parent="Grid" instance=ExtResource("2_epr14")]
position = Vector2(360, 150)
x = 1
y = 2

[node name="GridPosition_2_0" parent="Grid" instance=ExtResource("2_epr14")]
position = Vector2(570, 570)
x = 2

[node name="GridPosition_2_1" parent="Grid" instance=ExtResource("2_epr14")]
position = Vector2(570, 360)
x = 2
y = 1

[node name="GridPosition_2_2" parent="Grid" instance=ExtResource("2_epr14")]
position = Vector2(570, 150)
x = 2
y = 2

[connection signal="pressed" from="MultiplayerButtons/CreateGame" to="MultiplayerButtons" method="_on_create_game_pressed"]
[connection signal="pressed" from="MultiplayerButtons/JoinGame" to="MultiplayerButtons" method="_on_join_game_pressed"]
